dev needs an update

--- a/code/3-cyberbullying-preprocessing.ipynb
+++ b/code/3-cyberbullying-preprocessing.ipynb
@@ -2,11 +2,244 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a3a0f3d8-c173-402f-9165-6d2dd6dcc746",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "from plotnine import *\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "61e4605f-8fbc-4f84-9b52-3258a94b5adc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/cyberbullying_tweets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01904fd8-a4bd-4ba4-8f4b-2a40a77c14ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(47692, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a3e0afeb-c9c4-4f21-9a35-8ae84cc897a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://stackoverflow.com/questions/11331982/how-to-remove-any-url-within-a-string-in-python\n",
+    "def remove_urls (vTEXT):\n",
+    "    vTEXT = re.sub(r'(https|http)?:\\/\\/(\\w|\\.|\\/|\\?|\\=|\\&|\\%)*\\b', '', vTEXT, flags=re.MULTILINE)\n",
+    "    vTEXT = re.sub('@[^\\s]+','', vTEXT)\n",
+    "    return(vTEXT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e4524153-b478-4b69-bc82-36aeebe7d5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>cyberbullying_type</th>\n",
+       "      <th>no_links_text</th>\n",
+       "      <th>char_len</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>contains_link</th>\n",
+       "      <th>is_retweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>In other words #katandandre, your food was cra...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "      <td>In other words #katandandre, your food was cra...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Why is #aussietv so white? #MKR #theblock #ImA...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "      <td>Why is #aussietv so white? #MKR #theblock #ImA...</td>\n",
+       "      <td>115</td>\n",
+       "      <td>14</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@XochitlSuckkks a classy whore? Or more red ve...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "      <td>a classy whore? Or more red velvet cupcakes?</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>@Jason_Gio meh. :P  thanks for the heads up, b...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "      <td>meh. :P  thanks for the heads up, but not too...</td>\n",
+       "      <td>93</td>\n",
+       "      <td>17</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>@RudhoeEnglish This is an ISIS account pretend...</td>\n",
+       "      <td>not_cyberbullying</td>\n",
+       "      <td>This is an ISIS account pretending to be a Ku...</td>\n",
+       "      <td>89</td>\n",
+       "      <td>17</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text cyberbullying_type  \\\n",
+       "0  In other words #katandandre, your food was cra...  not_cyberbullying   \n",
+       "1  Why is #aussietv so white? #MKR #theblock #ImA...  not_cyberbullying   \n",
+       "2  @XochitlSuckkks a classy whore? Or more red ve...  not_cyberbullying   \n",
+       "3  @Jason_Gio meh. :P  thanks for the heads up, b...  not_cyberbullying   \n",
+       "4  @RudhoeEnglish This is an ISIS account pretend...  not_cyberbullying   \n",
+       "\n",
+       "                                       no_links_text  char_len  word_count  \\\n",
+       "0  In other words #katandandre, your food was cra...        61           9   \n",
+       "1  Why is #aussietv so white? #MKR #theblock #ImA...       115          14   \n",
+       "2       a classy whore? Or more red velvet cupcakes?        45           8   \n",
+       "3   meh. :P  thanks for the heads up, but not too...        93          17   \n",
+       "4   This is an ISIS account pretending to be a Ku...        89          17   \n",
+       "\n",
+       "   contains_link  is_retweet  \n",
+       "0          False       False  \n",
+       "1          False       False  \n",
+       "2          False       False  \n",
+       "3          False       False  \n",
+       "4          False       False  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remove links \n",
+    "df['no_links_text'] = [remove_urls(i) for i in df['tweet_text']]\n",
+    "\n",
+    "#character and word length\n",
+    "df['char_len'] = [len(i) for i in df.no_links_text]\n",
+    "df['word_count'] = [len(i.split()) for i in df.no_links_text]\n",
+    "\n",
+    "\n",
+    "df['contains_link'] = np.where(df['tweet_text'].str.contains('http'),True,False)\n",
+    "df['is_retweet'] = np.where(df['tweet_text'].str.contains('RT'),True,False)\n",
+    "\n",
+    "\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "523e6eeb-eefc-4613-b046-e1d149c0e9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(r'C:\\Users\\Dask\\Downloads\\cleaned_tweets_sample.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b3d31c6c-3fc2-4c83-ac93-df34c5c7be69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df['no_links_text']\n",
+    "y = df['cyberbullying_type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18c13f2d-0843-4d26-8c67-f7b177a406e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter vectorizer\n",
+    "TFID\n",
+    "sbert\n",
+    "\n",
+    "#me\n",
+    "SVM\n",
+    "forest\n",
+    "\n",
+    "#cassidy\n",
+    "NB\n",
+    "Logreg\n",
+    "\n",
+    "f1 score and confusion matrix"
+   ]
   }
  ],
  "metadata": {
