latest devin update

--- a/code/3-cyberbullying-preprocessing.ipynb
+++ b/code/3-cyberbullying-preprocessing.ipynb
@@ -302,31 +302,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "b62e51d2-c103-4d73-a273-989ee604313e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['not_cyberbullying', 'not_cyberbullying', 'not_cyberbullying', ...,\n",
-       "       'other_cyberbullying', 'other_cyberbullying',\n",
-       "       'other_cyberbullying'], dtype=object)"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipe.predict(t_df['content'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 117,
    "id": "5b6b630d-6f4a-4b1a-a67c-b95f0515e38f",
    "metadata": {},
@@ -573,8 +548,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "8d26b94b-ea49-4266-af68-6dad56aa43f0",
+   "execution_count": null,
+   "id": "9500e8f3-6ab5-4d29-9780-1a411698d7b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "622aa67e-cc4b-499b-b70c-e3f3dffc837f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9099686847599165, 0.7995824634655533)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_log = Pipeline([\n",
+    "    ('tf', TfidfVectorizer(stop_words = 'english', min_df=4)), \n",
+    "    ('lr', LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=200))\n",
+    "])\n",
+    "\n",
+    "tf_log.fit(X_train, y_train)\n",
+    "tf_log.score(X_train, y_train), tf_log.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "a3ec1af9-3748-4dff-8431-fc6efe7b094e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,224 +595,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "c9b04e18-07ff-4968-8a52-d5af68c72025",
+   "execution_count": 144,
+   "id": "c87534b8-a086-47b4-8470-f5a5db1f0785",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>link</th>\n",
-       "      <th>content</th>\n",
-       "      <th>date</th>\n",
-       "      <th>retweets</th>\n",
-       "      <th>favorites</th>\n",
-       "      <th>mentions</th>\n",
-       "      <th>hashtags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1698308935</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/169...</td>\n",
-       "      <td>Be sure to tune in and watch Donald Trump on L...</td>\n",
-       "      <td>2009-05-04 13:54:25</td>\n",
-       "      <td>510</td>\n",
-       "      <td>917</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1701461182</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/170...</td>\n",
-       "      <td>Donald Trump will be appearing on The View tom...</td>\n",
-       "      <td>2009-05-04 20:00:10</td>\n",
-       "      <td>34</td>\n",
-       "      <td>267</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1737479987</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/173...</td>\n",
-       "      <td>Donald Trump reads Top Ten Financial Tips on L...</td>\n",
-       "      <td>2009-05-08 08:38:08</td>\n",
-       "      <td>13</td>\n",
-       "      <td>19</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1741160716</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/174...</td>\n",
-       "      <td>New Blog Post: Celebrity Apprentice Finale and...</td>\n",
-       "      <td>2009-05-08 15:40:15</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1773561338</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/177...</td>\n",
-       "      <td>\"My persona will never be that of a wallflower...</td>\n",
-       "      <td>2009-05-12 09:07:28</td>\n",
-       "      <td>1375</td>\n",
-       "      <td>1945</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43347</th>\n",
-       "      <td>1273405198698975232</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/127...</td>\n",
-       "      <td>Joe Biden was a TOTAL FAILURE in Government. H...</td>\n",
-       "      <td>2020-06-17 19:00:32</td>\n",
-       "      <td>23402</td>\n",
-       "      <td>116377</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43348</th>\n",
-       "      <td>1273408026968457216</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/127...</td>\n",
-       "      <td>Will be interviewed on @ seanhannity tonight a...</td>\n",
-       "      <td>2020-06-17 19:11:47</td>\n",
-       "      <td>11810</td>\n",
-       "      <td>56659</td>\n",
-       "      <td>@seanhannity</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43349</th>\n",
-       "      <td>1273442195161387008</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/127...</td>\n",
-       "      <td>pic.twitter.com/3lm1spbU8X</td>\n",
-       "      <td>2020-06-17 21:27:33</td>\n",
-       "      <td>4959</td>\n",
-       "      <td>19344</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43350</th>\n",
-       "      <td>1273442469066276864</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/127...</td>\n",
-       "      <td>pic.twitter.com/vpCE5MadUz</td>\n",
-       "      <td>2020-06-17 21:28:38</td>\n",
-       "      <td>4627</td>\n",
-       "      <td>17022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43351</th>\n",
-       "      <td>1273442528411385858</td>\n",
-       "      <td>https://twitter.com/realDonaldTrump/status/127...</td>\n",
-       "      <td>pic.twitter.com/VLlc0BHW41</td>\n",
-       "      <td>2020-06-17 21:28:52</td>\n",
-       "      <td>3951</td>\n",
-       "      <td>14344</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>43352 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                        id                                               link  \\\n",
-       "0               1698308935  https://twitter.com/realDonaldTrump/status/169...   \n",
-       "1               1701461182  https://twitter.com/realDonaldTrump/status/170...   \n",
-       "2               1737479987  https://twitter.com/realDonaldTrump/status/173...   \n",
-       "3               1741160716  https://twitter.com/realDonaldTrump/status/174...   \n",
-       "4               1773561338  https://twitter.com/realDonaldTrump/status/177...   \n",
-       "...                    ...                                                ...   \n",
-       "43347  1273405198698975232  https://twitter.com/realDonaldTrump/status/127...   \n",
-       "43348  1273408026968457216  https://twitter.com/realDonaldTrump/status/127...   \n",
-       "43349  1273442195161387008  https://twitter.com/realDonaldTrump/status/127...   \n",
-       "43350  1273442469066276864  https://twitter.com/realDonaldTrump/status/127...   \n",
-       "43351  1273442528411385858  https://twitter.com/realDonaldTrump/status/127...   \n",
-       "\n",
-       "                                                 content                 date  \\\n",
-       "0      Be sure to tune in and watch Donald Trump on L...  2009-05-04 13:54:25   \n",
-       "1      Donald Trump will be appearing on The View tom...  2009-05-04 20:00:10   \n",
-       "2      Donald Trump reads Top Ten Financial Tips on L...  2009-05-08 08:38:08   \n",
-       "3      New Blog Post: Celebrity Apprentice Finale and...  2009-05-08 15:40:15   \n",
-       "4      \"My persona will never be that of a wallflower...  2009-05-12 09:07:28   \n",
-       "...                                                  ...                  ...   \n",
-       "43347  Joe Biden was a TOTAL FAILURE in Government. H...  2020-06-17 19:00:32   \n",
-       "43348  Will be interviewed on @ seanhannity tonight a...  2020-06-17 19:11:47   \n",
-       "43349                         pic.twitter.com/3lm1spbU8X  2020-06-17 21:27:33   \n",
-       "43350                         pic.twitter.com/vpCE5MadUz  2020-06-17 21:28:38   \n",
-       "43351                         pic.twitter.com/VLlc0BHW41  2020-06-17 21:28:52   \n",
-       "\n",
-       "       retweets  favorites      mentions hashtags  \n",
-       "0           510        917           NaN      NaN  \n",
-       "1            34        267           NaN      NaN  \n",
-       "2            13         19           NaN      NaN  \n",
-       "3            11         26           NaN      NaN  \n",
-       "4          1375       1945           NaN      NaN  \n",
-       "...         ...        ...           ...      ...  \n",
-       "43347     23402     116377           NaN      NaN  \n",
-       "43348     11810      56659  @seanhannity      NaN  \n",
-       "43349      4959      19344           NaN      NaN  \n",
-       "43350      4627      17022           NaN      NaN  \n",
-       "43351      3951      14344           NaN      NaN  \n",
-       "\n",
-       "[43352 rows x 8 columns]"
+       "predictions        \n",
+       "not_cyberbullying      21152\n",
+       "other_cyberbullying    19700\n",
+       "religion                1499\n",
+       "gender                   421\n",
+       "ethnicity                396\n",
+       "age                      184\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_df"
+    "preds = tf_log.predict(t_df['content'])\n",
+    "pred_df = pd.DataFrame(preds, columns=['predictions'])\n",
+    "pred_df.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "622aa67e-cc4b-499b-b70c-e3f3dffc837f",
+   "id": "3f2789f2-c357-484e-ac25-d12fba590725",
    "metadata": {},
    "outputs": [],
    "source": []
